cif/org.eclipse.escet.cif.tests/tests/controllercheck/non_blocking_under_control/nbuc_unreach.BCFN.run.err
WARNING: The specification contains no input variables.
ERROR: CIF controller properties checker failed due to unsatisfied preconditions:

  -------------------------------------------------------------------------------------------------------------------
  (1/1) Non-deterministic edges with overlapping guards within a location, for controllable event "Supervisor.c_act".
  -------------------------------------------------------------------------------------------------------------------
   * In automaton "Supervisor":
     - location Unreach2:
                ^
